# emola

./: CMakeLists.txt  emola.kdev4
.kdev4/: emola.kdev4
src/: GBdevice.c  GBdevice.h  alu.c  alu.h  clock.c  clock.h  cpu.c  cpu.h  cpu_t.h  debug.c  debug.h  defs.h  interruptHandling.c  interruptHandling.h  main.c  mmu.c  mmu.h  regs.c  regs.h
